--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+spring.main.banner-mode=off
 server.port=8090
 spring.application.name=codeninja
 server.contextPath=/v1
-
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost/codeninja
 spring.datasource.username=krishna
 spring.datasource.password=12345678
